--- a/Web/src/app/project/project-list/project-list.component.html
+++ b/Web/src/app/project/project-list/project-list.component.html
@@ -1,1 +1,8 @@
-<p>project-list works!</p>
+<div class="card mb-3" *ngFor="let p of projects" >
+  <div class="card-body">
+    <h5 class="card-title" >{{p.name}}</h5>
+    <p class="card-text">{{p.description}}</p>
+    <a href="#" class="btn btn-warning mr-1">Edit</a>
+    <button (click)="deleteProject(p.id)" class="btn btn-danger">Delete</button>
+  </div>
+</div>
