--- a/Web/src/app/project/project-list/project-list.component.html
+++ b/Web/src/app/project/project-list/project-list.component.html
@@ -1,8 +1,9 @@
-<div class="card mb-3" *ngFor="let p of projects" >
+<div class="card mb-3" *ngFor="let p of projects">
   <div class="card-body">
-    <h5 class="card-title" >{{p.name}}</h5>
+    <h5 class="card-title">{{p.name}}</h5>
     <p class="card-text">{{p.description}}</p>
-    <a href="#" class="btn btn-warning mr-1">Edit</a>
+    <button (click)="showModal(p)" class="btn btn-warning mr-1">Edit</button>
     <button (click)="deleteProject(p.id)" class="btn btn-danger">Delete</button>
   </div>
+  <app-project-edit [project]="p"></app-project-edit>
 </div>
