Consultant crud ui ans services

--- a/Web/src/app/consultant/consultant-edit/consultant-edit.component.html
+++ b/Web/src/app/consultant/consultant-edit/consultant-edit.component.html
@@ -1,4 +1,4 @@
-<div class="modal" tabindex="-1" id="editProject_{{project.id}}">
+<div class="modal" tabindex="-1" id="editConsultant_{{consultant.id}}">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -8,18 +8,11 @@
         </button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="projectForm" (ngSubmit)="updateProject()">
-          <app-form [inputs]="inputs" [myFormGroup]="projectForm"></app-form>
+        <form [formGroup]="consultantForm" (ngSubmit)="updateConsultant()">
+          <app-form [inputs]="inputs" [myFormGroup]="consultantForm"></app-form>
           <button type="submit" class="btn btn-warning">Update</button>
         </form>
       </div>
     </div>
   </div>
 </div>
-
-<!--<app-modal [id]="'editProject'"
-           [title]="'Edit Project'"
-           [body]=""
-           [event]="'sdsdsf'">
-
-</app-modal>-->
