--- a/Web/src/app/project/project-add/project-add.component.html
+++ b/Web/src/app/project/project-add/project-add.component.html
@@ -9,7 +9,7 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>-->
-<form [formGroup]="userForm" (ngSubmit)="addProject()">
-  <app-form [inputs]="inputs" [myFormGroup]="userForm"></app-form>
+<form [formGroup]="projectForm" (ngSubmit)="addProject()">
+  <app-form [inputs]="inputs" [myFormGroup]="projectForm"></app-form>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
