--- a/Web/src/app/affectation/affectation-edit/affectation-edit.component.html
+++ b/Web/src/app/affectation/affectation-edit/affectation-edit.component.html
@@ -1,1 +1,26 @@
-<p>affectation-edit works!</p>
+<div class="modal" tabindex="-1" id="editAffectation_{{affectation.id}}">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Edit Affectation</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="affectationForm" (ngSubmit)="updateAffectation()">
+          <select class="custom-select col-5" formControlName="project">
+            <option selected>Select a Project</option>
+            <option *ngFor="let p of projects" [value]="p.id">{{p.name}}</option>
+          </select>
+
+          <select class="custom-select col-5" formControlName="consultant">
+            <option selected>Select a Consultant</option>
+            <option *ngFor="let c of consultants" [value]="c.id">{{c.firstName}} {{c.lastName}}</option>
+          </select>
+          <button type="submit" class="btn btn-warning">Update</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
