--- a/Web/src/app/affectation/affectation-list/affectation-list.component.html
+++ b/Web/src/app/affectation/affectation-list/affectation-list.component.html
@@ -1,1 +1,22 @@
-<p>affectation-list works!</p>
+<table class="table">
+  <thead>
+  <tr>
+    <th scope="col">Project</th>
+    <th scope="col">Consultant</th>
+    <th scope="col">Created at</th>
+    <th scope="col">Update/Delete</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let a of affectations">
+    <td>{{a.projectId}}</td>
+    <td>{{a.consultantId}}</td>
+    <td>{{a.datetime}}</td>
+    <td>
+      <button (click)="showModal(a)" class="btn btn-warning mr-1">Edit</button>
+      <button (click)="deleteAffectation(a.id)" class="btn btn-danger">Delete</button>
+    </td>
+    <app-affectation-edit [affectation]="a"></app-affectation-edit>
+  </tr>
+  </tbody>
+</table>
