--- a/Web/src/app/consultant/consultant-edit/consultant-edit.component.html
+++ b/Web/src/app/consultant/consultant-edit/consultant-edit.component.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Edit Project</h5>
+        <h5 class="modal-title">Edit Consultant</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
