--- a/Web/src/app/project/project-list/project-list.component.html
+++ b/Web/src/app/project/project-list/project-list.component.html
@@ -1,3 +1,9 @@
+<div class="spinner-border" role="status" *ngIf="show">
+  <span class="sr-only">Loading...</span>
+</div>
+
+<div class="container" *ngIf="projects?.length==0">No Project found</div>
+
 <div class="card mb-3" *ngFor="let p of projects">
   <div class="card-body">
     <h5 class="card-title">{{p.name}}</h5>
